samples/_failures_safe/1761731555_7234c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_369af83d.c: In function ‘next_token’:
./samples/SAFE/__tmp_369af83d.c:158:17: error: expected declaration or statement at end of input
  158 |                 strncpy(token.value, lexer->input + start, length);
      |                 ^~~~~~~
./samples/SAFE/__tmp_369af83d.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_369af83d.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_369af83d.c:158:17: error: expected declaration or statement at end of input
